5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1594_820.log
== TEST (2019-03-28 12:00:06) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 28 / 03 / 2019

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_R$50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$50 = valor % 50

# Quantidade de notas de R$ 10
notas_R$10 = resto_R$50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$10 = resto_R$50 % 10

# Quantidade de notas de R$ 2
notas_R$2 = resto_R$10 // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_R$50
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 12:01:23) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 28 / 03 / 2019

VALOR = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
valor // 50 = notas_R$50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$50 = valor % 50

# Quantidade de notas de R$ 10
notas_R$10 = resto_R$50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$10 = resto_R$50 % 10

# Quantidade de notas de R$ 2
notas_R$2 = resto_R$10 // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_R$50
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 12:02:51) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 28 / 03 / 2019

VALOR = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
valor // 50 = n1

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$50 = valor % 50

# Quantidade de notas de R$ 10
notas_R$10 = resto_R$50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$10 = resto_R$50 % 10

# Quantidade de notas de R$ 2
notas_R$2 = resto_R$10 // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- ERROR:
File "XXXX", line 11
    resto_R$50 = valor % 50
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 12:03:18) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 28 / 03 / 2019

VALOR = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
valor // 50 = n50

# Valor restante a ser sacado com notas menores que R$ 50
resto = valor % 50

# Quantidade de notas de R$ 10
notas_R$10 = resto_R$50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$10 = resto_R$50 % 10

# Quantidade de notas de R$ 2
notas_R$2 = resto_R$10 // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- ERROR:
File "XXXX", line 14
    notas_R$10 = resto_R$50 // 10
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 12:05:50) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 28 / 03 / 2019

VALOR = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
valor // 50 = n50

# Valor restante a ser sacado com notas menores que R$ 50
resto1 = valor % 50

# Quantidade de notas de R$ 10
n10 = resto1 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto2 = resto1 % 10

# Quantidade de notas de R$ 2
n2 = resto2 // 2

print(int(n50))
print(int(n10))
print(int(n2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = n50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 12:06:08) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 28 / 03 / 2019

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
valor // 50 = n50

# Valor restante a ser sacado com notas menores que R$ 50
resto1 = valor % 50

# Quantidade de notas de R$ 10
n10 = resto1 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto2 = resto1 % 10

# Quantidade de notas de R$ 2
n2 = resto2 // 2

print(int(n50))
print(int(n10))
print(int(n2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = n50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 12:07:23) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 28 / 03 / 2019

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
n50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto1 = valor % 50

# Quantidade de notas de R$ 10
n10 = resto1 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto2 = resto1 % 10

# Quantidade de notas de R$ 2
n2 = resto2 // 2

print(int(n50))
print(int(n10))
print(int(n2))

-- OUTPUT:
40
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 12:07:40) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 28 / 03 / 2019

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
n50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto1 = valor % 50

# Quantidade de notas de R$ 10
n10 = resto1 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto2 = resto1 % 10

# Quantidade de notas de R$ 2
n2 = resto2 // 2

print(int(n50))
print(int(n10))
print(int(n2))

-- OUTPUT:
40
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 12:07:49) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 28 / 03 / 2019

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
n50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto1 = valor % 50

# Quantidade de notas de R$ 10
n10 = resto1 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto2 = resto1 % 10

# Quantidade de notas de R$ 2
n2 = resto2 // 2

print(int(n50))
print(int(n10))
print(int(n2))

-- EXECUTION TIME:
0.204404
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
